tests/lean/keyword_tactics.lean.expected.out
keyword_tactics.lean:28:2: error: unify tactic failed, failed to unify
  bool : Type
and
  ℕ : Type
state:
⊢ ℕ → ℕ → ℕ
keyword_tactics.lean:45:15: error: solve1 tactic failed, focused goal has not been solved
state:
f : ℕ → ℕ
⊢ ℕ
